<resources>
    <string name="app_name">Pezeshkam</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="login">ورود</string>
    <string name="signup">عضویت</string>
    <string name="create_account">ایجاد حساب کاربری</string>
    <string name="isDoctor">من پزشک هستم</string>
    <string name="empty_username_error">* لطفا نام کاربری را وارد کنید</string>
    <string name="empty_email_error">* لطفا ایمیل را وارد کنید</string>
    <string name="empty_password_error">* لطفا رمز را وارد کنید</string>
    <string name="empty_confirm_password_error">* لطفا رمز صحیح را دوباره وارد کنید</string>
    <string name="empty_name_error">* لطفا نام خود را وارد کنید</string>
    <string name="empty_phone_error">* لطفا شماره همراه خود را وارد کنید</string>
    <string name="unsuccessful_login_error">خطا در ورود</string>
    <string name="unsuccessful_signup_error">خطا در ایجاد حساب کاربری</string>
    <string name="successful_signup_msg">حساب کاربری با موفقیت ایجاد شد</string>
    <string name="server_down_error">خطا در سرور</string>

    <string name="login_api_url">http://10.0.2.2:8000/api/rest-auth/login/</string>
    <string name="signup_api_url">http://10.0.2.2:8000/api/rest-auth/registration/</string>
    <string name="setprofile_api_url">http://10.0.2.2:8000/set_profile/</string>
    <string name="getid_api_url">http://10.0.2.2:8000/get_id/</string>
    <string name="create_reserve_api_url">http://10.0.2.2:8000/create_reservation/</string>

    <string name="date">تاریخ:</string>
    <string name="year">سال</string>
    <string name="month">ماه</string>
    <string name="day">روز</string>
    <string name="select_begin_time">انتخاب زمان شروع</string>
    <string name="select_end_time">انتخاب زمان پایان</string>
    <string name="time_per_reserve">زمان هر رزرو</string>
    <string name="minute">دقیقه</string>
    <string name="default_reserve_time">10</string>
    <string name="create">ایجاد زمان رزرو</string>
    <string name="empty_date_error">لطفا تاریخ را وارد نمایید</string>
    <string name="incorrect_date_error">لطفا تاریخ صحیح وارد نمایید</string>
    <string name="incorrect_reserve_time_error">لطفا زمان مناسب انتخاب نمایید</string>
    <string name="empty_reserve_time_error">لطفا زمان هر رزرو را مشخص نمایید</string>
    <string name="cant_create_reserve_error">در زمان وارد شده نمیتوان رزرو ایجاد کرد</string>
    <string name="successful_create_reserve_msg">وقت های رزرو با موفقیت ایجاد شد</string>
    <string name="unsuccessful_create_reserve_error">خطا در ایجاد زمان های رزرو</string>
</resources>