<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/close_btn"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@drawable/icon_close_32px"
                tools:ignore="MissingConstraints" />
            <Switch
                android:id="@+id/doctor_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isDoctor"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/icon_user_32px"
            android:drawableStart="@drawable/icon_user_32px"
            android:drawablePadding="4dp"
            />
        <EditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:drawableLeft="@drawable/icon_phone_32px"
            android:drawableStart="@drawable/icon_phone_32px"
            android:drawablePadding="4dp"
            />
        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/icon_email_32px"
            android:drawableStart="@drawable/icon_email_32px"
            android:drawablePadding="4dp"
            />
        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_lock_32px"
            android:drawableStart="@drawable/icon_lock_32px"
            android:drawablePadding="4dp"
            />
        <EditText
            android:id="@+id/confirm_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_lock_32px"
            android:drawableStart="@drawable/icon_lock_32px"
            android:drawablePadding="4dp"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@color/colorBackgroundSide1"
            android:textSize="20sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>